[tool.poetry]
name = "dearpygui-demo"
version = "0.1.0"
description = ""
authors = ["platt699 <platt699@hsd.k12.or.us>"]

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
